k8s_manifest_files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8081  # Port exposed by the service
      targetPort: 8081  # Port on the container
  type: ClusterIP  # Expose the service within the cluster
